More tm -> tmparallel; support use of Rstem instead of SnowballStemmber, f

--- a/www/authors.html
+++ b/www/authors.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <title>tm - Authors</title>
-    <link rel="stylesheet" type="text/css" href="css/tm.css"/>
+    <title>tmparallel - Authors</title>
+    <link rel="stylesheet" type="text/css" href="css/tmparallel.css"/>
   </head>
   <body>
     <!--#include virtual="navigation.html" -->
     <div id="maincol">
       <h2>Authors and Contributors</h2>
       <p>
-	The text mining framework tm was originally created by
+	The text mining framework tmparallel was originally created by
 	<a href="http://www.dbai.tuwien.ac.at/staff/feinerer">Ingo
 	  Feinerer</a> as part of his dissertation at
 	  the <a href="http://statmath.wu.ac.at/">Institute for
