--- a/www/index.html
+++ b/www/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <title>tm - Text Mining Package</title>
-    <link rel="stylesheet" type="text/css" href="css/tm.css"/>
+    <title>tmparallel - Text Mining Package</title>
+    <link rel="stylesheet" type="text/css" href="css/tmparallel.css"/>
   </head>
   <body>
     <!--#include virtual="navigation.html" -->
     <div id="maincol">
-      <h2>tm - Text Mining Package</h2>
+      <h2>tmparallel - Text Mining Package</h2>
       <p>
-	<a href="http://tm.r-forge.r-project.org/">tm</a> (shorthand
+	<a href="http://tmparallel.r-forge.r-project.org/">tmparallel</a> (shorthand
 	for <a href="http://www.jstatsoft.org/v25/i05"><em>T</em>ext <em>M</em>ining
 	Infrastructure in R</a>) provides a framework for text mining
 	applications within <a href="http://www.r-project.org">R</a>.
       </p>
       <p>
-	The tm package offers functionality for managing text
+	The tmparallel package offers functionality for managing text
 	documents, abstracts the process of document manipulation
 	and eases the usage of heterogeneous text formats in
 	R. The package has integrated database backend support to
@@ -38,7 +38,7 @@
 	readers, transformations and filter operations.
       </p>
       <p>
-	tm provides easy access to preprocessing and manipulation
+	tmparallel provides easy access to preprocessing and manipulation
 	mechanisms such as whitespace removal, stemming, or
 	conversion between file formats. Further a generic filter
 	architecture is available in order to filter documents for
@@ -48,7 +48,7 @@
 	constructed from text documents.
       </p>
       <p>
-	tm is freely available under
+	tmparallel is freely available under
 	the <a href="http://www.gnu.org/licenses/gpl.html">GNU General
 	Public License (GPL)</a>.
       </p>
