--- a/www/navigation.html
+++ b/www/navigation.html
@@ -14,14 +14,14 @@
     <li><a href="screenshots.html">Screenshots</a></li>
     <li>News
       <ul>
-	<li><a href="https://r-forge.r-project.org/scm/viewvc.php/pkg/ChangeLog?view=markup&amp;root=tm">Changelog</a></li>
-	<li><a href="https://r-forge.r-project.org/scm/viewvc.php/pkg/inst/NEWS?view=markup&amp;root=tm">NEWS</a></li>
+	<li><a href="https://r-forge.r-project.org/scm/viewvc.php/pkg/ChangeLog?view=markup&amp;root=tmparallel">Changelog</a></li>
+	<li><a href="https://r-forge.r-project.org/scm/viewvc.php/pkg/inst/NEWS?view=markup&amp;root=tmparallel">NEWS</a></li>
       </ul>
     </li>
-    <li>Getting tm
+    <li>Getting tmparallel
       <ul>
-	<li><a href="http://cran.r-project.org/package=tm">Stable release from CRAN</a></li>
-	<li><a href="https://r-forge.r-project.org/projects/tm/">Development version from R-Forge</a></li>
+	<li><a href="http://cran.r-project.org/package=tmparallel">Stable release from CRAN</a></li>
+	<li><a href="https://r-forge.r-project.org/projects/tmparallel/">Development version from R-Forge</a></li>
       </ul>
     </li>
     <li>Resources
