--- a/www/publications.html
+++ b/www/publications.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <title>tm - Publications</title>
-    <link rel="stylesheet" type="text/css" href="css/tm.css"/>
+    <title>tmparallel - Publications</title>
+    <link rel="stylesheet" type="text/css" href="css/tmparallel.css"/>
   </head>
   <body>
     <!--#include virtual="navigation.html" -->
@@ -10,7 +10,7 @@
       <h2>Publications</h2>
       <p>
 	Publications cover introductory articles, system descriptions,
-	and papers where tm has been applied for implementing
+	and papers where tmparallel has been applied for implementing
 	experiments.
       </p>
       <h3>Introductory Articles</h3>
