--- a/www/screenshots.html
+++ b/www/screenshots.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <title>tm - Screenshots</title>
-    <link rel="stylesheet" type="text/css" href="css/tm.css"/>
+    <title>tmparallel - Screenshots</title>
+    <link rel="stylesheet" type="text/css" href="css/tmparallel.css"/>
     <link rel="stylesheet" type="text/css" href="css/lightbox.css" media="screen" />
     <script type="text/javascript" src="http://code.jquery.com/jquery-latest.pack.js"></script>
     <script type="text/javascript" src="js/jquery.lightbox.js"></script>
@@ -15,9 +15,9 @@
   <body>
     <!--#include virtual="navigation.html" -->
     <div id="maincol">
-      <h2>tm - Screenshots</h2>
+      <h2>tmparallel - Screenshots</h2>
       <p>
-	The screenshots show tm and R running
+	The screenshots show tmparallel and R running
 	in <a href="http://www.gnu.org/software/emacs/">Emacs</a> via
 	the
 	<a href="http://ess.r-project.org/">Emacs Speaks
@@ -28,17 +28,17 @@
 	term-document matrix.
       </p>
       <div style="text-align:center;">
-	<a href="images/BigramTokenizer.png" class="lightbox" rel="tm" title="Bigram Tokenizer">
+	<a href="images/BigramTokenizer.png" class="lightbox" rel="tmparallel" title="Bigram Tokenizer">
 	  <img alt="Bigram Tokenizer"
 	       src="images/thumb-BigramTokenizer.png" />
 	</a>&nbsp;
 	<a href="images/PrincipalComponentAnalysis.png" class="lightbox"
-	   rel="tm" title="Principal Component Analysis">
+	   rel="tmparallel" title="Principal Component Analysis">
 	  <img alt="Principal Component Analysis"
 	       src="images/thumb-PrincipalComponentAnalysis.png" />
 	</a>&nbsp;
 	<a href="images/TermDocMatrixPlot.png" class="lightbox"
-	   rel="tm" title="Term-Document Matrix">
+	   rel="tmparallel" title="Term-Document Matrix">
 	  <img alt="Term-Document Matrix"
 	       src="images/thumb-TermDocMatrixPlot.png" />
 	</a>
